<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.riley4.conversion_calculator.WeightConverterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/TextViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/from">
            </TextView>
            <TextView
                android:id="@+id/TextViewTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/EditTextFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_weight="1" >
            </EditText>
            <EditText
                android:id="@+id/EditTextTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:ems="10"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:editable="true">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/spinnerFrom"
                android:layout_weight="1"
                android:entries="@array/Weight" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/spinnerTo"
                android:layout_weight="1"
                android:entries="@array/Weight" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calc"
                android:id="@+id/buttonCalculate"
                android:onClick="OnCalcClick"/>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
